# eliabeart

./: .dockerignore  .env.example  Dockerfile  README.md  auth.ts  docker-compose.yml  next.config.mjs  package-lock.json  package.json  tsconfig.json
.claude/: launch.json
.specify/: feature.json
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
api/: .env.example  .gitignore  Dockerfile  alembic.ini  main.py  pyproject.toml  requirements.txt
api/alembic/: env.py
api/alembic/versions/: 12fb57f193b6_add_cover_column_to_album.py  2aab71d88382_add_album_owner.py  3647532541dd_database.py  695746f0340e_added_image_height_and_width.py  d89b59a8c2b3_delete_users_table.py
api/src/: main.py
api/src/album/: crud.py  schemas.py
api/src/auth/: auth.py
api/src/celery/: celery.py  tasks.py
api/src/core/: config.py  keycloak.py
api/src/database/: database.py  models.py
api/src/dependencies/: redis.py
api/src/imagem/: crud.py  schemas.py
api/src/lib/: lib.py
api/src/routes/: albums.py  albuns.py  auth.py  images.py  users.py
api/src/user/: crud.py  schemas.py
app/: globals.css  layout.tsx  page.tsx
app/admin/: ConfirmDialog.tsx  layout.tsx  page.tsx
app/components/: AlbumList.tsx  FeaturedFrame.tsx  Photo.tsx  PhotoModal.tsx  PrivateAlbumGate.tsx  RollRow.tsx  navbar.tsx
app/lib/: admin-api-client.ts  albums.ts  api-client.ts  api.ts  auth.ts  cache.ts  concurrency.ts  config.ts  image-processing.ts  images.ts  s3.ts  thumbs.ts
app/types/: Foto.ts  (+1 more)
(+28 files in other folders)
